devops-microservices-pipline/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice
spec:
  selector:
    app: microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31653  
  type: NodePort
